Project detail page: Fix some images getting too wide

--- a/app/assets/sass/components/_project-detail.scss
+++ b/app/assets/sass/components/_project-detail.scss
@@ -20,6 +20,7 @@
     img {
       display: block;
       max-height: 30em;
+      max-width: 30em;
       width: auto;
       margin: 0 auto;
     }
